# extremeWavesApplication

./: .gitignore  CMakeLists.txt  cmake-variants.yaml  mbed_app.json
cmake/: UploadMethodConfig.cmake
src/: CMakeLists.txt  main.cpp
src/libs/matrixtransfer/: CMakeLists.txt  client.cpp  client.h  matrixTransfer.cpp  matrixTransfer.h  receive.h  server.cpp  server.h
src/libs/serialib/: CMakeLists.txt  serialib.h
src/main/eightchipspi/: CMakeLists.txt  main.cpp
src/main/helloword/: CMakeLists.txt  main.cpp
src/main/matrix/: CMakeLists.txt  main.cpp
src/main/matrixclient/: CMakeLists.txt  client.cpp  client.h  main.cpp
src/main/matrixserver/: CMakeLists.txt  main.cpp  server.cpp  server.h
